--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@ a {
 	text-decoration:none;
 	color: #00F;
 }
+
+p {
+	font-family: sans-serif;
+	font-weight: 300;
+	font-size: 1em/1.5em;
+}
 .centered {
 	position: relative;
 	width: 100%;
