--- a/index.html
+++ b/index.html
@@ -38,7 +38,18 @@ p {
                         <br />
                         <img src="images/bookmarklet.png" width="326" height="148" /><br />
                         <br />
-                      <span style="font-family: Helvetica, Arial, sans-serif; font-size: 14px;"><span style="color: #ffffff; font-family: 'Lucida Grande', Verdana, sans-serif; font-size: small;"> <span class="bookmarklet" style="display: inline-block; font-size: 15px; border-top-left-radius: 8px 8px; border-top-right-radius: 8px 8px; border-bottom-right-radius: 8px 8px; border-bottom-left-radius: 8px 8px; background-color: #626262; padding-right: 7px; padding-bottom: 1px; padding-left: 7px; text-shadow: #3b3b3b 1px 1px 0px; min-width: 62px; text-align: center; vertical-align: 2px; text-decoration: none;"><strong><a href="javascript:function go(){ window.location = window.location.protocol+'//'+window.location.host+'.ezp-prod1.hul.harvard.edu'+window.location.pathname+window.location.search;}go();void(0);e">Get That Paper!</a></strong></span></span>&nbsp;</p><br/>
+                      <span style="font-family: Helvetica, Arial, sans-serif; font-size: 14px;">
+                      <span style="color: #ffffff; font-family: 'Lucida Grande', Verdana, sans-serif; font-size: small;">
+                      	<span class="bookmarklet" style="display: inline-block; font-size: 15px; border-top-left-radius: 8px 8px; border-top-right-radius: 8px 8px; border-bottom-right-radius: 8px 8px; border-bottom-left-radius: 8px 8px; background-color: #626262; padding-right: 7px; padding-bottom: 1px; padding-left: 7px; text-shadow: #3b3b3b 1px 1px 0px; min-width: 62px; text-align: center; vertical-align: 2px; text-decoration: none;">
+                      	<strong>
+                      		<a href="javascript:function go(){ window.location = window.location.protocol+'//'+window.location.host+'.ezp-prod1.hul.harvard.edu'+window.location.pathname+window.location.search;}go();void(0);e">
+                      			Get That Paper!
+                      		</a>
+                      			
+                      	</strong>
+                      	</span>
+                      </span>&nbsp;
+                      </p><br/>
                         <p><span style="vertical-align: 2px;">In <strong>Safari</strong> or in <strong>Chrome</strong>: drag the link above to your Bookmarks Bar.<br />
                         In <strong>Firefox</strong>: right-click the link above and select "Bookmark this Link", and place it in your Bookmarks Toolbar.<br />
                         In <strong>Internet Explorer:</strong> go get a <a href="http://www.google.com/chrome/intl/en/landing_chrome_mac.html?hl=en">real</a> <a href="http://www.mozilla.com/en-US/firefox/firefox.html?from=getfirefox">browser</a>, and then follow the instructions above.<br />
